Kubernetes Ingress, ConfigMaps & Secrets/03-combined-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatri-backend
  labels:
    app: yatri-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yatri-backend
  template:
    metadata:
      labels:
        app: yatri-backend
    spec:
      containers:
        - name: api
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: yatri-backend-service
spec:
  selector:
    app: yatri-backend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yatri-frontend
  labels:
    app: yatri-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yatri-frontend
  template:
    metadata:
      labels:
        app: yatri-frontend
    spec:
      containers:
        - name: web
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: yatri-frontend-service
spec:
  selector:
    app: yatri-frontend
  ports:
    - port: 80
      targetPort: 80
