Kubernetes Ingress, ConfigMaps & Secrets/05-ingress-subdomain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campus-virtual-host-ingress
spec:
  rules:
    - host: portal.campus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yatri-frontend-service
                port:
                  number: 80
    - host: api.campus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yatri-backend-service
                port:
                  number: 80
