Kubernetes Ingress, ConfigMaps & Secrets/06-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yatri-tls-ingress
spec:
  tls:
    - hosts:
        - secure.yatri.local
      secretName: yatri-tls-cert
  rules:
    - host: secure.yatri.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yatri-frontend-service
                port:
                  number: 80
